--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"
     />
-    <link rel="stylesheet" href="/musteat.css" />
+    <link rel="stylesheet" href="/views/index.css" />
     <!--<script
       type="text/javascript"
       src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=i6gv3hr65a"
